{
  "version": 4,
  "terraform_version": "1.1.9",
  "serial": 57,
  "lineage": "8bb43417-675a-626f-33fe-4fc2a6377a5f",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "Rock-test-IGW",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:471188201673:internet-gateway/igw-04da48f56e49a5160",
            "id": "igw-04da48f56e49a5160",
            "owner_id": "471188201673",
            "tags": {
              "Name": "Rock_IGW"
            },
            "tags_all": {
              "Name": "Rock_IGW"
            },
            "vpc_id": "vpc-0a2660d0e359b4275"
          },
          "dependencies": [
            "aws_vpc.Rock_test-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "Rock-IGW-attachment",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-04da48f56e49a5160",
            "id": "r-rtb-05118dbb09105d94c1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-05118dbb09105d94c",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.Rock-test-IGW",
            "aws_route_table.Rock-test-pub-route1",
            "aws_vpc.Rock_test-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "Rock-test-priv-route1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:471188201673:route-table/rtb-00294eb4a436b9072",
            "id": "rtb-00294eb4a436b9072",
            "owner_id": "471188201673",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "Rock-private-route-table"
            },
            "tags_all": {
              "Name": "Rock-private-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a2660d0e359b4275"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.Rock_test-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "Rock-test-pub-route1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:471188201673:route-table/rtb-05118dbb09105d94c",
            "id": "rtb-05118dbb09105d94c",
            "owner_id": "471188201673",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "Rock-public-route-table"
            },
            "tags_all": {
              "Name": "Rock-public-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a2660d0e359b4275"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.Rock_test-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "Rock-test-priv-association1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-020e5d702f0623d28",
            "route_table_id": "rtb-05118dbb09105d94c",
            "subnet_id": "subnet-053c185269ece83a4"
          },
          "dependencies": [
            "aws_route_table.Rock-test-pub-route1",
            "aws_subnet.Rock-test-priv-subnet1",
            "aws_vpc.Rock_test-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "Rock-test-priv-association2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f3ef3a50ad7919dc",
            "route_table_id": "rtb-05118dbb09105d94c",
            "subnet_id": "subnet-041ddc946c45cdfbc"
          },
          "dependencies": [
            "aws_route_table.Rock-test-pub-route1",
            "aws_subnet.Rock-test-priv-subnet2",
            "aws_vpc.Rock_test-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "Rock-test-pub-association1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b206debea791f3fb",
            "route_table_id": "rtb-05118dbb09105d94c",
            "subnet_id": "subnet-08f35983bf961278e"
          },
          "dependencies": [
            "aws_route_table.Rock-test-pub-route1",
            "aws_subnet.Rock-test-pub-subnet1",
            "aws_vpc.Rock_test-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "Rock-test-pub-association2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00d076ef5d69c65ab",
            "route_table_id": "rtb-05118dbb09105d94c",
            "subnet_id": "subnet-055620dec2ab92a6d"
          },
          "dependencies": [
            "aws_route_table.Rock-test-pub-route1",
            "aws_subnet.Rock-test-pub-subnet2",
            "aws_vpc.Rock_test-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "Rock-test-priv-subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:471188201673:subnet/subnet-053c185269ece83a4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2b",
            "availability_zone_id": "euw2-az3",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-053c185269ece83a4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "471188201673",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "rock_private_subnet"
            },
            "tags_all": {
              "Name": "rock_private_subnet"
            },
            "vpc_id": "vpc-0a2660d0e359b4275"
          },
          "dependencies": [
            "aws_vpc.Rock_test-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "Rock-test-priv-subnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:471188201673:subnet/subnet-041ddc946c45cdfbc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2b",
            "availability_zone_id": "euw2-az3",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-041ddc946c45cdfbc",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "471188201673",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "rock_private_subnet"
            },
            "tags_all": {
              "Name": "rock_private_subnet"
            },
            "vpc_id": "vpc-0a2660d0e359b4275"
          },
          "dependencies": [
            "aws_vpc.Rock_test-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "Rock-test-pub-subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:471188201673:subnet/subnet-08f35983bf961278e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2a",
            "availability_zone_id": "euw2-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08f35983bf961278e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "471188201673",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "rock_public_subnet"
            },
            "tags_all": {
              "Name": "rock_public_subnet"
            },
            "vpc_id": "vpc-0a2660d0e359b4275"
          },
          "dependencies": [
            "aws_vpc.Rock_test-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "Rock-test-pub-subnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:471188201673:subnet/subnet-055620dec2ab92a6d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2a",
            "availability_zone_id": "euw2-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-055620dec2ab92a6d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "471188201673",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "rock_public_subnet"
            },
            "tags_all": {
              "Name": "rock_public_subnet"
            },
            "vpc_id": "vpc-0a2660d0e359b4275"
          },
          "dependencies": [
            "aws_vpc.Rock_test-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "Rock_test-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:471188201673:vpc/vpc-0a2660d0e359b4275",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0ed0f9bc8af1e4e6e",
            "default_route_table_id": "rtb-0c3034a4171914ce8",
            "default_security_group_id": "sg-0764741bd481b819d",
            "dhcp_options_id": "dopt-0fe916ae5f499e82a",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0a2660d0e359b4275",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0c3034a4171914ce8",
            "owner_id": "471188201673",
            "tags": {
              "Name": "rock_vpc"
            },
            "tags_all": {
              "Name": "rock_vpc"
            }
          }
        }
      ]
    }
  ]
}